white gap fix attemot no 12

--- a/style.css
+++ b/style.css
@@ -33,12 +33,16 @@ body, html{
     background-size: cover;
     background-attachment: fixed;
     color: #2c2c2c;
+    position: relative;
 }
 main{
     flex: 1;
     background: inherit;
+    padding-bottom: 50px;
 }
 footer{
+    position: absolute;
+    bottom: 0;
     display: flex;
     justify-content: center;
     background-color: #050709;
@@ -47,7 +51,8 @@ footer{
     font-style: normal;
     font-weight: 150;
     margin: 0;
-    padding: 10px;
+    padding: 0;
+    width: 100%;
 
 }
 .header-icon{
@@ -162,6 +167,7 @@ h2,.pHeading{
     font-style: normal;
 }
 .scrollToTop{
+    z-index: 4;
     width: 32px;
     height: 32px;
     display: flex;
